--- a/supplier_home_send.html
+++ b/supplier_home_send.html
@@ -347,14 +347,14 @@
         }
 
         function onChange() {
+            var price = parseFloat(document.getElementById("price").value)
 
-
-             var total = document.getElementById("price").value * document.getElementById("count").value
+             var count =  parseInt(document.getElementById("count").value)
 
              var ten = 0
              
                 if(document.getElementById("ten").checked){
-                    ten = (total * 10 ) / 100
+                    ten = (price * 10 ) / 100
                     document.getElementById("tenValue").innerHTML = ten
                 }else {
                     document.getElementById("tenValue").innerHTML = ""
@@ -362,14 +362,17 @@
 
                 var twenty = 0
                 if(document.getElementById("twenty").checked){
-                    twenty = (total * 20 ) / 100
+                    twenty = (price * 20 ) / 100
                     document.getElementById("twentyValue").innerHTML = twenty
                 }else {
                     document.getElementById("twentyValue").innerHTML = ""
                 }
+                var material = 0
                 if(document.getElementById("material").value)
-                total+= ( parseFloat(document.getElementById("material").value) * document.getElementById("count").value)
-             document.getElementById("total").value = parseFloat(total)+parseFloat(ten)+parseFloat(twenty)
+                material=  parseFloat(document.getElementById("material").value)
+
+                var total = (price + parseFloat(ten)+ parseFloat(twenty)+material) * count
+             document.getElementById("total").value = total
         }
 
         function save_for_salem() {
