--- a/supplier_fatora_for_all.html
+++ b/supplier_fatora_for_all.html
@@ -116,12 +116,12 @@
                                     </thead>
                                     <tbody id="Customdata1">
                                         <tr>
-                                            <td style="font-size:18pt;color: green;">اجمالى رصيد لنا حتى الان</td>
+                                            <td style="font-size:18pt;">اجمالى رصيد لنا حتى الان</td>
                                             <td style="font-weight:bold;font-size:25pt;color: green;" id="third"> </td>
                                         </tr>
 
                                         <tr>
-                                            <td style="font-size:18pt;color: red;">اجمالى رصيد لكم حتى الان</td>
+                                            <td style="font-size:18pt;">اجمالى رصيد لكم حتى الان</td>
                                             <td style="font-weight:bold;font-size:25pt;color: red;" id="fourth"></td>
                                         </tr>
                                        
