--- a/employee_fatora_for_all.html
+++ b/employee_fatora_for_all.html
@@ -74,9 +74,9 @@
                 <br />
                 <h2 style="text-align: center;">لنا / علينا </h2>
                 <div style="display: flex;justify-content: center;"> 
-                    <h2 id="total_before_sub_for_salem" style="display: inline;padding-left: 20px;"></h2>
+                    <h2 id="total_before_sub_for_salem" style="display: inline;padding-left: 20px;color: green;"></h2>
                     <h2>/</h2>
-                    <h2 id="total_before_sub" style="display: inline;padding-right: 20px;"></h2>
+                    <h2 id="total_before_sub" style="display: inline;padding-right: 20px;color: red;"></h2>
 
                 </div>
                 
