--- a/staff_summry.html
+++ b/staff_summry.html
@@ -89,6 +89,27 @@
                         <option value="2028">2028</option>
                         <option value="2029">2029</option>
                         <option value="2030">2030</option>
+                        <option value="2030">2031</option>
+                        <option value="2030">2032</option>
+                        <option value="2030">2033</option>
+                        <option value="2030">2034</option>
+                        <option value="2030">2035</option>
+                        <option value="2030">2036</option>
+                        <option value="2030">2037</option>
+                        <option value="2030">2038</option>
+                        <option value="2030">2039</option>
+                        <option value="2030">2040</option>
+                        <option value="2030">2040</option>
+                        <option value="2030">2041</option>
+                        <option value="2030">2042</option>
+                        <option value="2030">2043</option>
+                        <option value="2030">2044</option>
+                        <option value="2030">2045</option>
+                        <option value="2030">2046</option>
+                        <option value="2030">2047</option>
+                        <option value="2030">2048</option>
+                        <option value="2030">2049</option>
+                        <option value="2030">2050</option>
                     </select>
 
                     <button type="button" style="margin-left: 1%;margin-right: 1%;" onclick="fetchData()"
