--- a/prices_items.html
+++ b/prices_items.html
@@ -82,7 +82,6 @@
                                     <tbody>
                                         <td><input id="new_type" placeholder="صنف جديد" class="form-control"></textarea></td>
                                         <td><input id="new_type_price" type="number"  value="0" class="form-control"></textarea></td>
-                                        <td><input id="order" type="number"  value="0" class="form-control"></textarea></td>
                                         <td><button onclick="saveNewType()"> حفظ</button></td>
                                     </tbody>
                                 </table>
@@ -197,7 +196,8 @@
     function saveNewType(){
         var item = document.getElementById("new_type").value
         var price =  document.getElementById("new_type_price").value
-        var order =  document.getElementById("order").value
+        var order = document.getElementById("category").value;
+
         database.ref('prices_items').push().set({
             'name': item,
             'price': price,
