--- a/home.html
+++ b/home.html
@@ -80,7 +80,7 @@
             if (name == 'salem' && password == 'yassin8badr11') {
                 localStorage.setItem('key', "1");
                 window.location.href = "main.html";
-            }else if (name == 'salem' && password == '01001319157') {
+            }else if (name == 'office_admin' && password == 'office_admin') {
                 localStorage.setItem('key', "2");
                 window.location.href = "admin_home_page_employee.html";
             } else {
