--- a/employee_home_send.html
+++ b/employee_home_send.html
@@ -280,9 +280,10 @@
                     var totalNotReceived = childData.count - childData.received
                     if ( totalNotReceived!= 0) {
                         var option = `<button class='btn btn-primary' onclick="showDialog('${totalNotReceived}','${childSnapshot.key}','${childData.received}')">استرداد بضاعه</button>`
-                        var table = `<tr> <td> ${childData.date} </td><td> ${childData.count} </td> <td> ${childData.type} </td> <td> ${childData.color} </td> <td> ${childData.price} </td> <td> ${childData.total} </td> <td> ${childData.received}</td><td style='color:red'> ${childData.count - childData.received} </td><td> <button style="color:red;" class='btn btn-error' onclick="deleteItem('${date}','${childSnapshot.key}')">حذف </a>  ${option}</td> </tr>`;
+                        var option_2 = `<a  href='employee_return_goods.html?key=${key}&itemKey=${childSnapshot.key}&name=${childData.type}&totalCount=${childData.count}&totalReceived=${childData.received}'  class='btn btn-warning' )">تفاصيل استرداد البضاعه</a>`
+                        var table = `<tr> <td> ${childData.date} </td><td> ${childData.count} </td> <td> ${childData.type} </td> <td> ${childData.color} </td> <td> ${childData.price} </td> <td> ${childData.total} </td> <td> ${childData.received}</td><td style='color:red'> ${childData.count - childData.received} </td><td> <button style="color:red;" class='btn btn-error' onclick="deleteItem('${date}','${childSnapshot.key}')">حذف </a>  ${option} ${option_2}</td> </tr>`;
                     } else {
-                        var table = `<tr> <td> ${childData.date} </td><td> ${childData.count} </td> <td> ${childData.type} </td> <td> ${childData.color} </td> <td> ${childData.price} </td> <td> ${childData.total} </td> <td> ${childData.received}</td><td style='color:black'> ${childData.count - childData.received} </td><td> <button style="color:red;" class='btn btn-error' onclick="deleteItem('${date}','${childSnapshot.key}')">حذف </a> </td> </tr>`;
+                        var table = `<tr> <td> ${childData.date} </td><td> ${childData.count} </td> <td> ${childData.type} </td> <td> ${childData.color} </td> <td> ${childData.price} </td> <td> ${childData.total} </td> <td> ${childData.received}</td><td style='color:black'> ${childData.count - childData.received} </td><td> <button style="color:red;" class='btn btn-error' onclick="deleteItem('${date}','${childSnapshot.key}')">حذف </a> ${option_2} </td> </tr>`;
                     }
                     $('.app-spinner').remove();
                     myTotal += parseFloat(childData.total);
@@ -298,6 +299,9 @@
         }
 
         
+        function open_import_goods(itemKey){
+            
+        }
 
         function showDialog(totalNotReceived,subKey,received){
             var date = document.getElementById("date").value
