--- a/home_page_employee.html
+++ b/home_page_employee.html
@@ -92,6 +92,9 @@
 
                                 <a type="button" style="margin-left: 1%;" href='employee_day_summary.html'
                                 class="btn btn-success">ملخص صادر اليوم</a>
+
+                                <a type="button" style="margin-left: 1%;" href='employee_day_import_summary.html'
+                                class="btn btn-primary">ملخص وادر اليوم</a>
                                 
                                 <a type="button" style="margin-left: 1%;"  href='employee_fatora_for_all.html'
                                 class="btn btn-danger">الرصيد </a>
