--- a/admin_employee_home_send.html
+++ b/admin_employee_home_send.html
@@ -152,6 +152,7 @@
                                         <th>الاجمالى</th>
                                         <th>تم استرداد</th>
                                         <th id="motab2y">المتبقي</th>
+                                        <th>خيارات</th>
                                     </tr>
 
                                 </thead>
