--- a/admin_employee_home_send.html
+++ b/admin_employee_home_send.html
@@ -273,6 +273,7 @@
                     //     var table = `<tr> <td> ${childData.date} </td><td> ${childData.count} </td> <td> ${childData.type} </td> <td> ${childData.color} </td> <td> ${childData.price} </td> <td> ${childData.total} </td> <td> <input   onchange="edits('${childSnapshot.key}',this)"  value="${childData.received}" class="form-control"></textarea></td><td> <button style="color:red;" class='btn btn-error' onclick="deleteItem('${date}','${childSnapshot.key}')">حذف </a> </td> </tr>`;
                     // }else 
                     if (childData.count - childData.received != 0) {
+                        var totalNotReceived = childData.count - childData.received
                         var option = `<button class='btn btn-primary' onclick="showDialog('${totalNotReceived}','${childSnapshot.key}','${childData.received}')">استرداد بضاعه</button>`
 
                         var table = `<tr> <td> ${childData.date} </td><td> ${childData.count} </td> <td> ${childData.type} </td> <td> ${childData.color} </td> <td> ${childData.price} </td> <td> ${childData.total} </td> <td> <input   onchange="edits('${childSnapshot.key}',this)"  value="${childData.received}" class="form-control"></textarea></td><td style='color:red'> ${childData.count - childData.received} </td><td>${option}</td> </tr>`;
