--- a/admin_employee_home_send.html
+++ b/admin_employee_home_send.html
@@ -276,7 +276,7 @@
                         var totalNotReceived = childData.count - childData.received
                         var option = `<button class='btn btn-primary' onclick="showDialog('${totalNotReceived}','${childSnapshot.key}','${childData.received}')">استرداد بضاعه</button>`
 
-                        var table = `<tr> <td> ${childData.date} </td><td> ${childData.count} </td> <td> ${childData.type} </td> <td> ${childData.color} </td> <td> ${childData.price} </td> <td> ${childData.total} </td> <td> <input   onchange="edits('${childSnapshot.key}',this)"  value="${childData.received}" class="form-control"></textarea></td><td style='color:red'> ${childData.count - childData.received} </td><td>${option}</td> </tr>`;
+                        var table = `<tr> <td> ${childData.date} </td><td> ${childData.count} </td> <td> ${childData.type} </td> <td> ${childData.color} </td> <td> ${childData.price} </td> <td> ${childData.total} </td> <td> ${childData.received}</td><td style='color:red'> ${childData.count - childData.received} </td><td>${option}</td> </tr>`;
                             $('.app-spinner').remove();
                     myTotal += parseFloat(childData.total);
                     document.getElementById("Customdata").innerHTML += table;
@@ -285,6 +285,23 @@
 
                 });
             });
+        }
+
+        function showDialog(totalNotReceived,subKey,received){
+            var date = document.getElementById("date").value
+            if(date == null || date =="") {
+                alert('برجاء اختار تاريخ الاسترداد')
+                return
+            }
+            var  newReceived = prompt(' تاريخ الاسترداد '+date+'\n'+` المتبقي ${totalNotReceived}`);
+            
+            if(newReceived == null) return
+            if( parseInt(newReceived) <= parseInt(totalNotReceived) ){
+                var totalReceived = parseInt(received) + parseInt(newReceived)
+                receivedTotal(subKey,date,newReceived,totalReceived)
+            }else {
+                alert('الرقم غير صحيح')
+            }
         }
         function onChangeType() {
 
