--- a/admin_employee_home_send.html
+++ b/admin_employee_home_send.html
@@ -344,6 +344,44 @@
 
         }
 
+        function receivedTotal(subKey,date,count,totalReceived) {
+
+
+// var total = 0;
+// if (v.value.includes('+')) {
+//     var arr = v.value.split('+')
+//     for (index in arr) {
+//         total += parseInt(arr[index])
+//     }
+// } else if (v.value.includes('-')) {
+//     var arr = v.value.split('-')
+//     total = arr[0]
+//     for (var i = 1; i < arr.length; i++) {
+//         total -= parseInt(arr[i])
+//     }
+// } else {
+//     total = parseInt(v.value)
+// }
+
+database.ref('employee_have_items').child(key).child(subKey).child("receivedData").push().set(
+    {
+        receivedTotal:count,
+        date:date
+    }, function (error) {
+    if (error) {
+        alert("خطا")
+    }
+})
+
+
+database.ref('employee_have_items').child(key).child(subKey).child("received").set(parseInt(totalReceived), function (error) {
+    if (error) {
+        alert("خطا")
+    }
+})
+
+
+}
         function save(btn) {
             var total = document.getElementById("total").value
             if (total > 0) {
