--- a/supplier_home_send.html
+++ b/supplier_home_send.html
@@ -394,7 +394,7 @@
                 var twentySecond = 0
                 if(document.getElementById("twentySecond").checked){
                     twentySecond = (price * 20 ) / 100
-                    document.getElementById("twentySecondValue").innerHTML = twenty
+                    document.getElementById("twentySecondValue").innerHTML = twentySecond
                 }else {
                     document.getElementById("twentySecondValue").innerHTML = ""
                 }
