--- a/employee_home_send.html
+++ b/employee_home_send.html
@@ -135,7 +135,7 @@
                         <br />
                         <br />
                         <textarea style="width: 50%; height: 100pt;" id="note"></textarea>
-                        <button onclick="saveNote(this)"> حفظ</button>
+                        <button onclick="saveNote(this)" class="btn btn-primary"> حفظ</button>
                         <button onclick="deleteNote(this)" class="btn btn-danger"> حذف</button>
                         <div class="panel-body" dir="rtl">
                             <h1> البضاعة التى ارسلت للصنايعي </h1>
