--- a/admin_employee_home_send.html
+++ b/admin_employee_home_send.html
@@ -137,13 +137,13 @@
                                     <tr>
                                         <th>السعر</th>
                                         <td>
-                                            <input id="price" type="number" class="form-control"></textarea>
+                                            <input id="price" type="number" disabled class="form-control"></textarea>
                                         </td>
                                     </tr>
                                     <tr>
                                         <th> الاجمالى</th>
                                         <td>
-                                            <input id="total" type="" class="form-control"></textarea>
+                                            <input id="total" type="" disabled class="form-control"></textarea>
                                         </td>
                                     </tr>
 
