--- a/employee_day_import_summary.html
+++ b/employee_day_import_summary.html
@@ -70,7 +70,7 @@
                         <div class="panel panel-default">
 
                             <div class="panel-body" id="content" dir="rtl">
-
+                                <h2>ملخص وارد اليوم</h2>
                                 <div class="panel-body" dir="rtl">
                                     <td><input id="date" type="date" class="form-control"
                                             style="width: 50%;"></textarea></td>
