--- a/employee_day_summary.html
+++ b/employee_day_summary.html
@@ -70,7 +70,8 @@
                         <div class="panel panel-default">
 
                             <div class="panel-body" id="content" dir="rtl">
-                                <h2>ملخص صادر اليوم</h2>
+                                <h2>ملخص صادر اليوم  <span style='font-size:50px;'>&#9195;</span>
+                                </h2>
                                 <div class="panel-body" dir="rtl">
                                     <td><input id="date" type="date" class="form-control"
                                             style="width: 50%;"></textarea></td>
