--- a/admin_employee_home_send.html
+++ b/admin_employee_home_send.html
@@ -180,8 +180,8 @@
                                         <th>العدد</th>
                                         <th>النوع</th>
                                         <th>اللون</th>
-                                        <th>السعر</th>
-                                        <th>الاجمالى</th>
+                                        <!-- <th>السعر</th>
+                                        <th>الاجمالى</th> -->
                                         <th>تم استرداد</th>
                                         <th id="motab2y">المتبقي</th>
                                         <th>خيارات</th>
@@ -308,7 +308,8 @@
                         var totalNotReceived = childData.count - childData.received
                         var option = `<button class='btn btn-primary' onclick="showDialog('${totalNotReceived}','${childSnapshot.key}','${childData.received}')">استرداد بضاعه</button>`
 
-                        var table = `<tr> <td> ${childData.date} </td><td> ${childData.count} </td> <td> ${childData.type} </td> <td> ${childData.color} </td> <td> ${childData.price} </td> <td> ${childData.total} </td> <td> ${childData.received}</td><td style='color:red'> ${childData.count - childData.received} </td><td>${option}</td> </tr>`;
+                        //var table = `<tr> <td> ${childData.date} </td><td> ${childData.count} </td> <td> ${childData.type} </td> <td> ${childData.color} </td> <td> ${childData.price} </td> <td> ${childData.total} </td> <td> ${childData.received}</td><td style='color:red'> ${childData.count - childData.received} </td><td>${option}</td> </tr>`;
+                        var table = `<tr> <td> ${childData.date} </td><td> ${childData.count} </td> <td> ${childData.type} </td> <td> ${childData.color} </td>  <td> ${childData.received}</td><td style='color:red'> ${childData.count - childData.received} </td><td>${option}</td> </tr>`;
                             $('.app-spinner').remove();
                     myTotal += parseFloat(childData.total);
                     document.getElementById("Customdata").innerHTML += table;
