--- a/admin_employee_home_send.html
+++ b/admin_employee_home_send.html
@@ -134,13 +134,13 @@
                                         <td><input id="color" class="form-control"></textarea></td>
 
                                     </tr>
-                                    <tr>
+                                    <tr style="visibility: hidden;">
                                         <th>السعر</th>
                                         <td>
                                             <input id="price" type="number" disabled class="form-control"></textarea>
                                         </td>
                                     </tr>
-                                    <tr>
+                                    <tr style="visibility: hidden;">
                                         <th> الاجمالى</th>
                                         <td>
                                             <input id="total" type="" disabled class="form-control"></textarea>
