--- a/supplier_home_send.html
+++ b/supplier_home_send.html
@@ -156,7 +156,7 @@
                                         </td>
                                     </tr>
                                     <tr>
-                                        <th>اضافة 20% طلب خاص</th>
+                                        <th>اضافة 20% بيع قطاعي </th>
                                         <td>
                                             <input class="form-check-input" type="checkbox" class="form-control" id="twentySecond" onchange="onChange()"> <label id="twentySecondValue"></label></checkbox> 
                                         </td>
@@ -220,7 +220,7 @@
                                         <th>10%</th>
                                         <th>20%</th>
                                         <th>10% طلب خاص</th>
-                                        <th>20% طلب خاص</th>
+                                        <th>20% بيع قطاعي </th>
                                         <th>قيمة القماش</th>
                                         <th>الاجمالى</th>
                                         <th>خيارات</th>
